# matchbox-keyboard

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  matchbox-keyboard.desktop  matchbox-keyboard.doap
applet/: Makefile.am  applet.c
data/: Makefile.am  keyboard.xml
examples/: Makefile.am  matchbox-keyboard-embbed.c  matchbox-keyboard-gtk-embed.c
gtk-im/: Makefile.am  im-context.c  im-context.h  im-module.c  im-protocol.c  im-protocol.h
layouts/: Makefile.am  base-fragment-ar_EG.xml.in  base-fragment-ca_ES.xml.in  base-fragment-cs_CZ.xml.in  base-fragment-da_DK.xml.in  base-fragment-de_DE.xml.in  base-fragment-el_GR.xml.in  base-fragment-en_US.xml.in  base-fragment-es_ES.xml.in  base-fragment-et_EE.xml.in  base-fragment-fi_FI.xml.in  base-fragment-fr_FR.xml.in  base-fragment-it_IT.xml.in  base-fragment-lv_LV.xml.in  base-fragment-nb_NO.xml.in  base-fragment-nl_NL.xml.in  base-fragment-pl_PL.xml.in  base-fragment-pt_PT.xml.in  base-fragment-ru_RU.xml.in  base-fragment-sk_SK.xml.in  base-fragment-sl_SI.xml.in  base-fragment-sv_SE.xml.in  base-fragment-tr_TR.xml.in  base-fragment.xml.in  internet-fragment.xml.in  keyboard-ar_EG.xml.in  keyboard-ca_ES.xml.in  keyboard-cs_CZ.xml.in  keyboard-da_DK.xml.in  keyboard-de_DE.xml.in  keyboard-dvorak.xml  keyboard-el_GR.xml.in  keyboard-en_US.xml.in  keyboard-es_ES.xml.in  keyboard-et_EE.xml.in  keyboard-fi.xml  keyboard-fi_FI.xml.in  keyboard-finger.xml  keyboard-fr_FR.xml.in  keyboard-full.xml  (+23 more)
layouts/old/: keyboard-extended.xml  keyboard-ru.xml
src/: Makefile.am  config-parser.c  config.xml  libmatchbox-keyboard.c  libmatchbox-keyboard.h  libmatchbox-keyboard.pc.in  main.c  matchbox-keyboard-image.c  matchbox-keyboard-key.c  matchbox-keyboard-layout.c  matchbox-keyboard-popup.c  matchbox-keyboard-popup.h  matchbox-keyboard-remote.c  matchbox-keyboard-remote.h  matchbox-keyboard-row.c  matchbox-keyboard-ui-cairo-backend.c  matchbox-keyboard-ui-cairo-backend.h  matchbox-keyboard-ui-xft-backend.c  matchbox-keyboard-ui-xft-backend.h  matchbox-keyboard-ui.c  matchbox-keyboard-xembed.c  matchbox-keyboard.c  matchbox-keyboard.h  mb-gtk-keyboard.c  mb-gtk-keyboard.h  util-list.c  util-list.h  util.c
